# random-forest-news-recommender

./: .gitignore  DESIGN.md  HISTORY.md  README.md  crawl.py  main.py  predict.py  pyproject.toml  train.py
data/: crawled_labeled.json  crawled_unlabeled.json  data_for_training.xlsx
src/recommender/: config.py  crawler.py  data_loader.py  features.py  model.py  preprocess.py
tests/: conftest.py  test_data_loader.py  test_features.py  test_model.py  test_pipeline.py  test_preprocess.py
